adding events and docs

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 
     <my-badge>New</my-badge>
 
-    <my-button label="Huzzah!!!" disabled><span slot="icon">🤘</span>Click me!</my-button>
+    <my-button disabled="false"><span slot="icon">🤘</span>Click me!</my-button>
 
     <my-button class="themed">Also, click me!</my-button>
 
